--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 *.framework filter=lfs diff=lfs merge=lfs -text
 *.a filter=lfs diff=lfs merge=lfs -text
-*.framework/* filter=lfs diff=lfs merge=lfs -text
+*.framework/*/opencv2 filter=lfs diff=lfs merge=lfs -text
