--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.framework filter=lfs diff=lfs merge=lfs -text
 *.a filter=lfs diff=lfs merge=lfs -text
 *.framework/*/opencv2 filter=lfs diff=lfs merge=lfs -text
+*/opencv2.framework/Versions/A/opencv2 filter=lfs diff=lfs merge=lfs -text
